--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
                 <!-- TimeTable -->
                 <div class="col-xs-12">
-                    <button onclick="swap(one, two)">
+                    <button onclick="swap()">
                         <img class="col-xs-12" src="img/timeTable.png" alt="Time Table"/>
                     </button>
                 </div>
 
                 <!-- FAQ -->
                 <div class="col-xs-12">
-                    <button onclick="swap(two, one)">
+                    <button onclick="swap()">
                         <img class="col-xs-12" src="img/faq.png" alt="FAQ"/>
                     </button>
                 </div>
@@ -61,7 +61,7 @@
 
 
 
-            <div class="container_Main container-fluid"
+            <div class="container_Main container-fluid">
                 <p id="one">Main Content</p>
                 <p style="display:none" id="two">Not Visible</p>
             </div>
