ShowTimeTable function works

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <!-- TimeTable -->
                 <div class="col-xs-12">
-                    <button onclick="swap()">
+                    <button onclick="showTimeTable()">
                         <img class="col-xs-12" src="img/timeTable.png" alt="Time Table"/>
                     </button>
                 </div>
@@ -62,8 +62,8 @@
 
 
             <div class="container_Main container-fluid">
-                <p id="one">Main Content</p>
-                <p style="display:none" id="two">Not Visible</p>
+                <div id="main">Main Content</div>
+                <div style="display:none" id="timeTable">Not Visible</div>
             </div>
 
     </div>
