--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="phonegap.js"></script>
     <script src="js/main.js"></script>
+
 
     <!-- Styles init -->
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
@@ -49,7 +51,7 @@
 
                 <!-- FAQ -->
                 <div>
-                    <button onclick="loadFAQ">
+                    <button onclick="load_faq()">
                         <img class="col-xs-12" src="img/faq.png" alt="FAQ"/>
                     </button>
                 </div>
