--- a/timeTable.html
+++ b/timeTable.html
@@ -2,9 +2,26 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="phonegap.js"></script>
+    <script src="js/main.js"></script>
     <title>Time Table</title>
 </head>
 <body>
-Woot
+
+<table class="table table-hover">
+    <tr>
+        <td>Hardwell</td>
+        <td>Nicky Romero</td>
+        <td>Steve Angello</td>
+    </tr>
+    <tr>
+        <td>Netherlands</td>
+        <td>Netherlands</td>
+        <td>Sweden</td>
+    </tr>
+</table>
 </body>
 </html>
