--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-    <div class="container">
+    <div id="ID_container_sidebar" class="container">
             <!-- Sidebar for buttons -->
             <div class="col-xs-12 class_container_Sidebar">
                 <!-- GoogleMaps -->
@@ -81,7 +81,7 @@
                 </div>
 
                 <div id="ID_container_faq" class="class_container_faq">
-
+                FAQ
                 </div>
 
             </div>
@@ -92,7 +92,7 @@
 
 
     <!-- Footer -->
-    <div class="container_Footer container">
+    <div id="ID_container_footer" class="container_Footer container">
         <div class="footer col-xs-12">Footer
             <div class="visible-xs-block">only Mobile</div>
             <div class="visible-sm-block">only Tablet</div>
