--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     <!-- timeTable element -->
                         <div class="tt_element row" id="tt_element">
-                            <div class="tt_e_left col-xs-3">
+                         <!--   <div class="tt_e_left col-xs-3">
 
                             </div>
                             <div class="tt_e_right col-xs-9">
@@ -81,13 +81,14 @@
                                     europe and has lots of important infos which i will post here. Next thing i know is his name should
                                     <!--be in the description.
                                     <p>What is when this text keeps getting bigger and bigger</p>
-                                    <p>another paragraph</p> -->
+                                    <p>another paragraph</p>
                                 </div>
                                 <div class="tt_e_low row">
                                     <div class="tt_e_stage col-xs-8">Main Stage</div>
                                     <div class="tt_e_date col-xs-4">22:00</div>
                                 </div>
                             </div>
+                        -->
 
                         </div>
                 </div>
