--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             <div class="col-xs-2 sidebar">
                 <!-- GoogleMaps -->
                 <div class="row">
-                    <button class="col-xs-12" onclick="back_showHome()">
-                        <img class="col-xs-12" src="img/back_button.png" alt="Back"/>
+                    <button class="col-xs-12 col-sm-8" onclick="back_showHome()">
+                        <img class="col-xs-12 btn_side" src="img/back_button.png" alt="Back"/>
                     </button>
                  <!-- TimeTable -->
 
-                    <button onclick="showTimeTable()">
-                        <img class="col-xs-12" src="img/timeTable.png" alt="Time Table"/>
+                    <button class="col-xs-12 col-sm-4 col- btn_side" onclick="showTimeTable()">
+                        <img class="col-xs-12 btn_side" src="img/timeTable.png" alt="Time Table"/>
                     </button>
 
                 <!-- FAQ -->
 
-                    <button onclick="load_faq()">
-                        <img class="col-xs-12" src="img/faq.png" alt="FAQ"/>
+                    <button class="col-xs-12 col-sm-0 btn_side" onclick="load_faq()">
+                        <img class="col-xs-12 btn_side" src="img/faq.png" alt="FAQ"/>
                     </button>
                 </div>
             </div>
