--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <!-- GoogleMaps -->
                 <div class="row">
                     <div class="col-xs-4" style="padding-right: 0px">
-                        <button class=" col-xs-12 btn_side" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="back_showHome()">
-                            <img class="btn_side" src="img/home.gif" alt="Home"/> NEWS
+                        <button class=" col-xs-12 btn_side" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="back_showhome()">
+                            <img class="btn_side" src="img/home.gif" alt="home"/> news
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
@@ -50,6 +50,7 @@
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
                         </ul>
+
                     </div>
 
                     <div class="col-xs-4 btn_side">
