--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <!-- Top Navigation with 4 Buttons and 2 Dropdown Menues -->
             <div class="container topNav shadow ">
                 <!-- GoogleMaps -->
-                <div class="row">
-                    <div class="col-xs-3" style="padding-right: 0px">
+                <div class="row" style="margin: 0px">
+                    <div class="col-xs-3 btn_side">
                         <button class=" col-xs-12 btn_side" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs" style="margin-left: 5px">Timetable</span>
+                            <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs">Timetable</span>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
@@ -69,9 +69,9 @@
                     </div>
 
 
-                    <div class="col-xs-3" style="padding-left: 0px">
+                    <div class="col-xs-3 btn_side">
                         <button class=" col-xs-12 btn_side" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs" style="margin-left: 5px">FAQ</span>
+                            <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
