--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="widht=device-width, intial-scale=1">
 
     <!-- Bootstrap init -->
-    <script src="jquery-1.11.2.min.js"></script>
+    <script src="js/jquery-1.11.2.min.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
     <script src="js/main.js"></script>
 
@@ -45,11 +44,11 @@
                             <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs">Timetable</span>
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="timetable_menu">
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Right Now!</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Thursday</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Friday</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Saturday</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-3" href="#">Friday</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-4" href="#">Saturday</a></li>
                         </ul>
 
                     </div>
@@ -74,9 +73,9 @@
                             <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Food</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
                         </ul>
                     </div>
                 </div>
