homebutton, som changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,23 @@
 
 <!-- header -->
 
-    <div class="container ">
-        <div class="header col-xs-12 shadow">Electric Love</div>
+    <div class="container header ">
+        <div class="row" style="margin: 0px">
+            <div class="col-xs-2 visible-sm-block visible-md-block visible-lg-block">
+                <a id="logo" href="index.html">
+                    <img class="logo" src="img/placeholder_100.png"/>
+                </a>
+            </div>
+            <div class="col-xs-1 visible-xs-block">
+                <a id="logo" href="index.html">
+                    <img class="logo" src="img/palceholder_35.png"/>
+                </a>
+            </div>
+            <span class="col-xs-11 visible-xs-block">ELF - 2015</span>
+            <span class="visible-sm-block">Electric Love Festival - 2015</span>
+            <span class="visible-md-block">Electric Love Festival - 2015</span>
+            <span class="visible-lg-block">Electric Love Festival - 2015</span>
+        </div>
     </div>
 
 
@@ -39,9 +54,9 @@
             <div class="container topNav shadow ">
                 <!-- GoogleMaps -->
                 <div class="row" style="margin: 0px">
-                    <div class="col-xs-3 btn_side">
-                        <button class=" col-xs-12 btn_side" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs">Timetable</span>
+                    <div class="col-xs-3 btn_nav">
+                        <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">Timetable</span>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="timetable_menu">
@@ -53,24 +68,24 @@
 
                     </div>
 
-                    <div class="col-xs-3 btn_side">
-                        <button class="col-xs-12 btn_side" onclick="showTimeTable()">
-                            <img class="btn_side" src="img/placeholder.png" alt="Time Table"/>
+                    <div class="col-xs-3 btn_nav">
+                        <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
+                            <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
                             <span class="hidden-xs">Map</span>
                         </button>
                     </div>
 
-                    <div class="col-xs-3 btn_side">
-                        <button class="col-xs-12 btn_side" onclick="showTimeTable()">
-                            <img class="btn_side" src="img/placeholder.png" alt="Time Table"/>
+                    <div class="col-xs-3 btn_nav">
+                        <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
+                            <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
                             <span class="hidden-xs">News</span>
                         </button>
                     </div>
 
 
-                    <div class="col-xs-3 btn_side">
-                        <button class=" col-xs-12 btn_side" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="btn_side" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
+                    <div class="col-xs-3 btn_nav">
+                        <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
