config.xml added

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                     <img class="logo" src="img/placeholder_100.png"/>
                 </a>
             </div>
-            <div class="col-xs-1 visible-xs-block">
-                <a id="logo" href="index.html">
+            <div class="col-xs-2 visible-xs-block">
+                <a href="index.html">
                     <img class="logo" src="img/palceholder_35.png"/>
                 </a>
             </div>
-            <span class="col-xs-11 visible-xs-block">ELF - 2015</span>
+            <span class="col-xs-10 visible-xs-block">ELF - 2015</span>
             <span class="visible-sm-block">Electric Love Festival - 2015</span>
             <span class="visible-md-block">Electric Love Festival - 2015</span>
             <span class="visible-lg-block">Electric Love Festival - 2015</span>
