--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
             w
             -->
 
-
-
-            <div id="main" class="container-fluid main shadow">
+            <div id="main" class="container-fluid main shadow"><div id="inner">
                 <div id="first">Main Content</div>
 
                 <div id="timeTable" class="timeTable" style="display:none">
@@ -135,8 +133,8 @@
 
                 <div id="faq" class="faq">
                 </div>
-
-                </div>
+            </div>
+            </div>
 
     </div>
 
