scroll meh background and opacity

--- a/index.html
+++ b/index.html
@@ -104,13 +104,21 @@
             w
             -->
 
-            <div id="main" class="container-fluid main shadow"><div id="inner">
-                <div id="first">Main Content</div>
+            <div id="main" class="container-fluid main shadow">
+                <div id="first" class="row">
+                    <div class="start">
+                    </div>
 
-                <div id="timeTable" class="timeTable" style="display:none">
+
+                </div>
+
+
+
+
+
 
                     <!-- timeTable element -->
-                        <div class="tt_element row" id="tt_element">
+                        <div class="row" style="display: none" id="tt_element">
                          <!--   <div class="tt_e_left col-xs-3">
 
                             </div>
@@ -129,12 +137,11 @@
                         -->
 
                         </div>
-                </div>
 
                 <div id="faq" class="faq">
                 </div>
             </div>
-            </div>
+
 
     </div>
 
